new file:   0-Abstract.tex 	modified:   2-Developement.tex 	new file:   5-Conclusion.tex 	modified:   main.pdf 	modified:   main.tex

--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -58,11 +58,14 @@
 
 \usepackage{wrapfig}
 
+%Default inline comments
+\newcommand{\todoin}[2][]{\todo[inline,#1]{#2}}
+
 \begin{document}
 
 %\listoftodos
 
-\include{title}
+%\include{title}
 
 \frontmatter
 
