modified:   2-Developement.tex 	modified:   main.pdf

--- a/Thesis/2-Developement.tex
+++ b/Thesis/2-Developement.tex
@@ -69,6 +69,14 @@ Their variation is
   \end{align}
 \end{equation}
 
+Where the Dirac matrices for the ten-dimensional space time are
+\begin{equation}
+  \Gamma^M = e^M_A \Gamma^A.
+\end{equation}
+Here $e^M_A$ denotes the vielbein that describes the graviton and $\Gamma^A$ are elements of a 
+Clifford algebra, so $\{\Gamma^A,\Gamma^B}=2\eta^{AB}$.
+\todoin{Wtf is $\Gamma$?}
+
 Supersymmetry preservation means that all variations must be zero. 
 For convenience, we set $H=0$ and $\phi=\mathrm{const.}$ .
 This leads to the constraints
@@ -130,6 +138,59 @@ $N=0$
 
 \todoin{Coordinate definition of complex manifold}
 
+
+\todoin{Kahler form}
+
+
+ORIENTIFOLD PLANES AND D-BRANES
+
+\subsection{Orientifold planes and D-branes}
+
+\todoin{D-brane motivation through O-planes.}
+If we compactify a Type II string theory on a Calabi-Yau manifold, we  obtain a four-dimensional
+$\mathcal N=2$ supersymmetric theory.
+In order to allow for chirality, we must obtain a $N=1$ theory. This can be done through the orientifold
+projection, which consists in modding out $\Omega \mathcal R$.
+\todoin{Couldn't we start from a modded out manifold? It seems there is more than geometry here.}
+
+
+\todoin{Understand RR charges.}
+\begin{equation}
+  S= -\frac{1}{4\pi \alpha'}\int d^2\sigma \epsilon^{\alpha\beta} B_{\mu\nu}  \partial_\alpha X^\mu \partial_\beta X^\nu
+\end{equation}
+
+\subsection{D6-branes in flat 10d space}
+
+\todoin{Configurations of branes}
+
+In order to obtain chiral 4d fermions, two D6-branes in flat 10d can intersect over a 4d region.
+The open string spectrum of an intersection of a stack of $N_1$ D6-branes and a stack of $N_2$ D6-branes
+can be classified as:
+
+\begin{itemize}
+  \item Strings stretching from one stack to itself, which lead to 7d $U(N_i)$ gauge boson, three real
+    adjoint scalars and their fermion superpartners, .
+  \item String that go from one stack to the other are localized at the intersection. 
+    Their associated fields are are charged under the bi-fundamental representation $(N_1, \bar N_2)$ of 
+    $U(N_1)\times U(N_2)$, which includes a 4d chiral fermion in $(N_1,\bar N_2)$.
+\end{itemize}
+
+\subsection{D6-branes on a torus}
+
+
+\subsection{D6-branes on a Calabi-Yau}
+In order to obtain stable D6-brane configurations, we impose that they wrap around volume 
+minimizing 3-cycles, which are special Lagrangian 3-cycles and satisfy
+\begin{equation}
+  J|_\Pi = 0 , \qquad \Im (e^{-i\phi}\Omega_3)|_\Pi=0
+\end{equation}
+
+The volume of the special Lagrangian 3-cycle is
+\begin{equation}
+  Vol(\Pi)=\int_\Pi \Re(e^{-i\phi}\Omega_3)
+\end{equation}
+
+\todoin{Spectrum}
 
 
 
