--- a/Thesis/3-Project.tex
+++ b/Thesis/3-Project.tex
@@ -6,6 +6,12 @@ structures and are given be the Hodge number $h_{21}=101$.
 
 We can add terms of the following type to the quintic
 
+\begin{equation}
+  x_i^5, x_i^4 x_j^1, x_i^3 x_j^2, x_i^3 x_j x_k, x_i^2 x_j x_k x_l, x_1 x_2 x_3 x_4 x_5
+\end{equation}
+
+Not all of these terms are independent, since a coordinate redefiniton $GL(5,\mathbb C)$.
+
 \todoin{Deformation classification}
 
 \todoin{Coordinate redefinition freedom}
@@ -52,6 +58,7 @@ In these coordinates, the quintic becomes
 \begin{equation}
   \int_{A^2} \Omega = \int  \dots
 \end{equation}
+
 
 
 
