--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -57,9 +57,13 @@
 \usetikzlibrary{calc}
 
 \usepackage{wrapfig}
+\usepackage{slashed}
 
 %Default inline comments
 \newcommand{\todoin}[2][]{\todo[inline,#1]{#2}}
+
+\usepackage{mathtools}
+\DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 
 \begin{document}
 
