modified:   1-Introduction.tex 	modified:   2-Developement.tex 	new file:   Send/2-Developement.tex 	new file:   Send/2-Developement.tex.old 	new file:   Send/main.pdf 	new file:   Send/main.tex 	modified:   main.pdf 	modified:   main.tex 	new file:   trash

--- a/Thesis/Send/2-Developement.tex
+++ b/Thesis/Send/2-Developement.tex
@@ -1,7 +1,7 @@
-\chapter{Type IIA compactifications}
+\section{Type IIA compactifications}
 
 
-sTRING THEORY GENERALITIES
+STRING THEORY GENERALITIES
 
 
 In the following section we motivate the requirement that additional dimensions are compactified
@@ -171,11 +171,11 @@ It can be shown that the holonomy group being contained in $U(N)$ implies that t
 
 %\todoin{Coordinate definition of complex manifold}
 
-p-FORMS / deRHAM COHOMOLOGY
+HOMOLOGY AND p-FORMS / deRHAM COHOMOLOGY
 
 DOLBEAULT COHOMOLOGY / HODGE NUMBERS
 
-HOMOLOGY / INTERSECTION NUMBERS
+INTERSECTION NUMBERS
 
 
 MODULI SPACE
