--- a/Thesis/Send/main.tex
+++ b/Thesis/Send/main.tex
@@ -1,6 +1,5 @@
-\documentclass[secnumarabic,nobalancelastpage,10pt,nofootinbib,a4paper]{memoir}
-%\documentclass[aps,secnumarabic,nobalancelastpage,amsmath,amssymb,
-%nofootinbib]{revtex4}
+\documentclass[11pt]{article}
+
 
 % secnumarabic is a particularly nice way of identifying sections by
 % number to aid electronic review and commentary.
@@ -28,21 +27,18 @@
 \usepackage{epigraph}
 
 %\setlength{\paperheight}{11in}
-\usepackage{todonotes}
+%\usepackage{todonotes}
 \usepackage{microtype}
 
 \graphicspath{{images/}}
 
-\newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
-\nouppercaseheads
-%\setlength{\parindent}{0pt}
 
 %tikz
 
 %\usepackage{tikz}
 %\usetikzlibrary
 %{decorations.markings}
-%\usepackage{xcolor}
+\usepackage{xcolor}
 %\definecolor{gridcolor}{RGB}{255 216 234}
 %\definecolor{gridlabelcolor}{RGB}{255 24 131}
 %\def\rnd#1{
@@ -58,6 +54,8 @@
 
 \usepackage{wrapfig}
 \usepackage{slashed}
+\usepackage{youngtab}
+\usepackage{a4wide}
 
 %Default inline comments
 \newcommand{\todoin}[2][]{\todo[inline,#1]{#2}}
@@ -65,31 +63,28 @@
 \usepackage{mathtools}
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 
+\setlength{\parindent}{0pt}
+\renewcommand{\arraystretch}{1.3}
+\renewcommand{\baselinestretch}{1.1}
+\setcounter{tocdepth}{2}
+
 \begin{document}
 
 %\listoftodos
 
 %\include{title}
 
-\frontmatter
 
-\tableofcontents*
+\tableofcontents
 
-\mainmatter
 
-\renewcommand{\baselinestretch}{1.50}\normalsize
+\setlength{\parskip}{1em plus1ex minus.5ex}
 
-\include{0-Abstract}
-
-\include{1-Introduction}
 
 \include{2-Developement}
 
 
 %\include{3-Project}
 
-\include{5-Conclusion}
 
-\bibliographystyle{babunsrt}
-\bibliography{mybib}
 \end{document}
