modified:   1-Introduction.tex 	modified:   2-Developement.tex 	modified:   3-Project.tex 	new file:   4-Conclusion.tex 	modified:   main.pdf 	modified:   main.tex

--- a/Thesis/3-Project.tex
+++ b/Thesis/3-Project.tex
@@ -1,3 +1,16 @@
+\chapter{Type IIA on the quintic}
+
+\section{Quintic threefold motivation}
+
+\todoin{Why the quintic?}
+
+\todoin{Why study sLags?}
+
+\section{sLags on Fermat's quintic}
+
+\subsection{SM on the quintic}
+
+\section{sLags on the deformed quintic}
 
 \subsection{Quintic deformations}
 The consider the possible deformations of Fermat's quintic.
