--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -85,10 +85,9 @@
 
 \include{2-Developement}
 
+\include{3-Project}
 
-%\include{3-Project}
-
-\include{5-Conclusion}
+\include{4-Conclusion}
 
 \bibliographystyle{babunsrt}
 \bibliography{mybib}
