--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -83,12 +83,14 @@
 
 \include{1-Introduction}
 
-\include{2-Developement}
-
-\include{3-Project}
-
-\include{4-Conclusion}
+%\include{2-Developement}
+%
+%\include{3-Project}
+%
+%\include{4-Conclusion}
 
 \bibliographystyle{babunsrt}
 \bibliography{mybib}
+How should I cite?
+
 \end{document}
